# weather-station

./: .flaskenv  .gitignore  README.md  fixtures.py  pyproject.toml  weather_station.py
static/css/: main.css
templates/: current_status.html
