[tool.poetry]
name = "weather-station"
version = "0.1.0"
description = "Weather station API and website"
authors = ["Kevin Houlihan <kevin@crimsoncookie.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
flask-restful = "^0.3.9"
click = "^8.0.1"
marshmallow = "^3.12.1"
pygal = "^2.4.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.17.1"
watchdog = "^2.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
